# packages/backend/openapi.yml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 paths:
   /api/health:
     get:
-      operationId: HealthController_get
+      operationId: HealthController_check
       parameters: []
       responses:
         '200':
@@ -16,6 +16,20 @@ paths:
   /api/health/auth:
     get:
       operationId: HealthController_authCheck
+      parameters: []
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetHealthDto'
+      security:
+        - bearer: []
+      tags: *ref_0
+  /api/health/deep:
+    get:
+      operationId: HealthController_deepCheck
       parameters: []
       responses:
         '200':
