# packages/backend/src/health/health.controller.ts
@@ -1,16 +1,18 @@
 import { Controller, Get, HttpStatus, UseGuards } from '@nestjs/common'
-import { ApiResponse } from '@nestjs/swagger'
+import { ApiBearerAuth, ApiResponse } from '@nestjs/swagger'
 import { JwtGuard } from '../auth/guard/jwt.guard'
 import { GetHealthDto } from './health.dto'
+import { HealthService } from './health.service'
 
 @Controller('health')
 export class HealthController {
+  constructor(private healthService: HealthService) {}
   @ApiResponse({
     status: HttpStatus.OK,
     type: GetHealthDto,
   })
   @Get()
-  async get(): Promise<GetHealthDto> {
+  async check(): Promise<GetHealthDto> {
     return new GetHealthDto('health check is OK!')
   }
 
@@ -18,10 +20,19 @@ export class HealthController {
     status: HttpStatus.OK,
     type: GetHealthDto,
   })
-  // @ApiBearerAuth()
+  @ApiBearerAuth()
   @Get('auth')
   @UseGuards(JwtGuard)
   async authCheck(): Promise<GetHealthDto> {
     return new GetHealthDto('health check w/ Auth is OK!')
+  }
+
+  @ApiResponse({
+    status: HttpStatus.OK,
+    type: GetHealthDto,
+  })
+  @Get('deep')
+  async deepCheck(): Promise<GetHealthDto> {
+    return this.healthService.getHealthMessage()
   }
 }
